# vk2d

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  todo_list.txt
Vk2D/: CMakeLists.txt
Vk2D/Vk2D/: Vk2d.h
Vk2D/Vk2D/Vk2D_Audio/: vk2d_audio.c  vk2d_audio.h  vk2d_sound.c  vk2d_sound.h
Vk2D/Vk2D/Vk2D_Audio/Vk2D_Private/: vk2d_audio_context.h
Vk2D/Vk2D/Vk2D_Base/: vk2d_base.c  vk2d_base.h  vk2d_event.c  vk2d_event.h  vk2d_file.c  vk2d_file.h  vk2d_list.c  vk2d_list.h  vk2d_log.c  vk2d_log.h  vk2d_map.c  vk2d_map.h  vk2d_mem.h
Vk2D/Vk2D/Vk2D_Input/: vk2d_button.h  vk2d_input_system.c  vk2d_input_system.h  vk2d_keycode.h
Vk2D/Vk2D/Vk2D_Math/: vk2d_mat4.c  vk2d_mat4.h  vk2d_vec2.c  vk2d_vec2.h  vk2d_vec3.c  vk2d_vec3.h  vk2d_vec4.c  vk2d_vec4.h
Vk2D/Vk2D/Vk2D_Render/: vk2d_renderer.c  vk2d_renderer.h  vk2d_renderer_core.c  vk2d_renderer_core.h  vk2d_sprite.h  vk2d_texture.h
Vk2D/Vk2D/Vk2D_Render/Vk2D_Private/: vk2d_command.c  vk2d_command.h  vk2d_descriptor_set.h  vk2d_device.c  vk2d_device.h  vk2d_gpu.c  vk2d_gpu.h  vk2d_graphics_mem.c  vk2d_graphics_mem.h  vk2d_ibuffer.c  vk2d_ibuffer.h  vk2d_instance_data.h  vk2d_pipeline.c  vk2d_pipeline.h  vk2d_renderer_data.c  vk2d_renderer_data.h  vk2d_renderpass.c  vk2d_renderpass.h  vk2d_shader.c  vk2d_shader.h  vk2d_swapchain.c  vk2d_swapchain.h  vk2d_texture_handler.c  vk2d_texture_handler.h  vk2d_vbuffer.c  vk2d_vbuffer.h
Vk2D/Vk2D/Vk2D_Window/: vk2d_window.c  vk2d_window.h
example_app/: CMakeLists.txt  main.c
example_app/vk2d_shaders/: fragment.frag  vertex.vert
scripts/: build.bat  generate_project.bat
